Added buttons and text boxes on signup page

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -22,7 +22,8 @@
         android:layout_alignParentStart="true"
         android:ems="10"
         android:hint="Enter Phone Number"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignParentLeft="true" />
 
     <EditText
         android:id="@+id/editTextEnterUserName"
@@ -34,7 +35,9 @@
         android:layout_marginTop="5dp"
         android:ems="10"
         android:hint="Enter User Name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="2dp" />
 
     <EditText
         android:id="@+id/editTextEnterInterests"
@@ -46,7 +49,9 @@
         android:layout_marginTop="54dp"
         android:ems="10"
         android:hint="Enter Interests"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp" />
 
     <EditText
         android:id="@+id/editTextEnterCurrentLocation"
@@ -58,7 +63,9 @@
         android:layout_marginTop="103dp"
         android:ems="10"
         android:hint="Enter Current Location"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp" />
 
     <EditText
         android:id="@+id/editTextEnterEmail"
@@ -70,7 +77,9 @@
         android:layout_marginTop="144dp"
         android:ems="10"
         android:hint="Enter Email"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="2dp" />
 
     <EditText
         android:id="@+id/editTextEnterPassword"
@@ -82,7 +91,9 @@
         android:layout_marginTop="186dp"
         android:ems="10"
         android:hint="Enter Password"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="1dp" />
 
     <EditText
         android:id="@+id/editTextConfirmPassword"
@@ -94,7 +105,9 @@
         android:layout_marginTop="234dp"
         android:ems="10"
         android:hint="Confirm Password"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp" />
 
     <TextView
         android:id="@+id/textViewPrivacy"
@@ -102,7 +115,8 @@
         android:layout_height="51dp"
         android:layout_alignStart="@+id/editTextEnterEmail"
         android:layout_alignParentBottom="true"
-        android:text="By signing up, you agree to our terms of service and privacy and cookies statement." />
+        android:text="By signing up, you agree to our terms of service and privacy and cookies statement."
+        android:layout_alignLeft="@+id/editTextEnterEmail" />
 
     <Button
         android:id="@+id/buttonSignUp"
@@ -112,6 +126,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="-7dp"
         android:layout_marginBottom="54dp"
-        android:text="Sign Up" />
+        android:text="Sign Up"
+        android:layout_alignRight="@+id/editTextEnterPassword"
+        android:layout_marginRight="-7dp" />
 
 </RelativeLayout>
