--- a/app/src/main/res/layout/content_event__concert__astroworld.xml
+++ b/app/src/main/res/layout/content_event__concert__astroworld.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,4 +8,4 @@
     tools:context=".Event_Concert_Astroworld"
     tools:showIn="@layout/activity_event__concert__astroworld">
 
-</android.support.constraint.ConstraintLayout>
+</android.widget.RelativeLayout>
