--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,9 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomePage">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/buttonLogout"
+        android:layout_width="121dp"
+        android:layout_height="80dp"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="235dp"
+        android:text="Logout" />
+
+    <Button
+        android:id="@+id/buttonSettings"
+        android:layout_width="121dp"
+        android:layout_height="80dp"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="235dp"
+        android:text="Settings" />
+
+    <Button
+        android:id="@+id/buttonSearch"
+        android:layout_width="121dp"
+        android:layout_height="80dp"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="113dp"
+        android:text="Search Events" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="Welcome to LINK"
+        android:textSize="34sp"
+        tools:layout_editor_absoluteX="163dp"
+        tools:layout_editor_absoluteY="28dp" />
+
+    <Button
+        android:id="@+id/buttonCreate"
+        android:layout_width="121dp"
+        android:layout_height="80dp"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="115dp"
+        android:text="Create Events" />
+</RelativeLayout>
