--- a/app/src/main/res/menu/navmenu.xml
+++ b/app/src/main/res/menu/navmenu.xml
@@ -8,6 +8,9 @@
         android:id="@+id/menuSearch"
         android:title="Search Events" />
     <item
+        android:id="@+id/menuEvents"
+        android:title="Create Events" />
+    <item
         android:id="@+id/menuSetting"
         android:title="Settings" />
     <item
