--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -108,13 +108,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextEnterPhoneNumber"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="234dp"
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPersonName"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp" />
+        android:text="123456" />
 
     <TextView
         android:id="@+id/textViewPrivacy"
