Added new activities

--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -10,7 +10,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="SECURITY"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonHomepage"
